--- a/apps/jekyll/_layouts/default.html
+++ b/apps/jekyll/_layouts/default.html
@@ -23,5 +23,8 @@
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="{{ '/js/site.js' | relative_url }}?v={{ site.cache_tag }}"></script>
+  {% if page.js %}
+  <script src="{{ page.js | relative_url }}?v={{ site.cache_tag }}"></script>
+  {% endif %}
 </body>
 </html>
