--- a/apps/jekyll/_sass/bootstrap/_type.scss
+++ b/apps/jekyll/_sass/bootstrap/_type.scss
@@ -61,7 +61,7 @@ p {
 
 .lead {
   margin-bottom: $line-height-computed;
-  font-size: floor(($font-size-base * 1.15));
+  font-size: $font-size-lead;
   font-weight: 300;
   line-height: 1.4;
 
