--- a/apps/jekyll/_sass/bootstrap/_variables.scss
+++ b/apps/jekyll/_sass/bootstrap/_variables.scss
@@ -3,9 +3,23 @@ $bootstrap-sass-asset-helper: false !default;
 // Variables
 // --------------------------------------------------
 
-
 //== Colors
 //
+
+// Freefocus branding
+$red: #8D4A4B !default;
+$vivid-red: #C14D4E !default;
+$green: #717648 !default;
+$vivid-green: #A3B557 !default;
+$orange: #D58A45 !default;
+$vivid-orange: #D89E66 !default;
+$yellow: #DEDE36 !default;
+$vivid-yellow: #F8F82F !default;
+$blue: #385484 !default;
+$vivid-blue: #6494C4 !default;
+$cyan: #0E707C !default;
+$vivid-cyan: #71BBAF !default;
+
 //## Gray and brand colors for use across Bootstrap.
 
 $gray-base:              #000 !default;
@@ -16,10 +30,10 @@ $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
 $brand-primary:         darken(#428bca, 6.5%) !default; // #337ab7
-$brand-success:         #5cb85c !default;
-$brand-info:            #5bc0de !default;
-$brand-warning:         #f0ad4e !default;
-$brand-danger:          #d9534f !default;
+$brand-success:         $vivid-green;
+$brand-info:            $yellow;
+$brand-warning:         $orange;
+$brand-danger:          $vivid-red;
 
 
 //== Scaffolding
@@ -29,7 +43,7 @@ $brand-danger:          #d9534f !default;
 //** Background color for `<body>`.
 $body-bg:               #222222 !default;
 //** Global text color on `<body>`.
-$text-color:            $gray-lighter !default;
+$text-color:            #A5A5A5 !default;
 
 //** Global textual link color.
 $link-color:            $brand-primary !default;
@@ -52,9 +66,10 @@ $font-family-base:        $font-family-sans-serif !default;
 $font-size-base:          14px !default;
 $font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
 $font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
+$font-size-lead:          22px !default;
 
 $font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
-$font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
+$font-size-h2:            42px; // ~30px
 $font-size-h3:            ceil(($font-size-base * 1.7)) !default; // ~24px
 $font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
 $font-size-h5:            $font-size-base !default;
@@ -67,8 +82,8 @@ $line-height-computed:    floor(($font-size-base * $line-height-base)) !default;
 
 //** By default, this inherits from the `<body>`.
 $headings-font-family:    inherit !default;
-$headings-font-weight:    500 !default;
-$headings-line-height:    1.1 !default;
+$headings-font-weight:    200 !default;
+$headings-line-height:    1.3 !default;
 $headings-color:          inherit !default;
 
 
