--- a/apps/jekyll/_layouts/default.html
+++ b/apps/jekyll/_layouts/default.html
@@ -2,6 +2,7 @@
 ---
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
 
   <title>{{ page.title }}</title>
   <link href="{{ '/css/styles.css' | relative_url }}?v={{ site.cache_tag }}" rel="stylesheet" />
+  <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -24,7 +26,9 @@
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="{{ '/js/site.js' | relative_url }}?v={{ site.cache_tag }}"></script>
   {% if page.js %}
-  <script src="{{ page.js | relative_url }}?v={{ site.cache_tag }}"></script>
+  {% for js in page.js %}
+    <script src="{{ js | relative_url }}?v={{ site.cache_tag }}"></script>
+  {% endfor %}
   {% endif %}
 </body>
 </html>
