--- a/apps/jekyll/_sass/bootstrap/_variables.scss
+++ b/apps/jekyll/_sass/bootstrap/_variables.scss
@@ -20,6 +20,8 @@ $vivid-blue: #6494C4 !default;
 $cyan: #0E707C !default;
 $vivid-cyan: #71BBAF !default;
 
+$main-panel-background-color: #1a1a1a !default;
+
 //## Gray and brand colors for use across Bootstrap.
 
 $gray-base:              #000 !default;
@@ -379,7 +381,7 @@ $container-lg:                 $container-large-desktop !default;
 // Basics of a navbar
 $navbar-height:                    50px !default;
 $navbar-margin-bottom:             $line-height-computed !default;
-$navbar-border-radius:             $border-radius-base !default;
+$navbar-border-radius:             0 !default;
 $navbar-padding-horizontal:        floor(($grid-gutter-width / 2)) !default;
 $navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2) !default;
 $navbar-collapse-max-height:       340px !default;
